# DRL_Novamob

./: README.md
install/: local_setup.sh  setup.sh
install/novamob_gym/share/novamob_gym/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ppo_novamob_tensorboard/PPO_1/: events.out.tfevents.1722017051.filipe-desktop.154503.0  events.out.tfevents.1723483121.filipe-desktop.23615.0
ppo_novamob_tensorboard/PPO_10/: events.out.tfevents.1722025859.filipe-desktop.208829.0  events.out.tfevents.1723500319.filipe-desktop.127452.0
ppo_novamob_tensorboard/PPO_11/: events.out.tfevents.1722026021.filipe-desktop.209910.0  events.out.tfevents.1723573699.filipe-desktop.7890.0
ppo_novamob_tensorboard/PPO_12/: events.out.tfevents.1722026105.filipe-desktop.210492.0  events.out.tfevents.1723590644.filipe-desktop.7219.0
ppo_novamob_tensorboard/PPO_13/: events.out.tfevents.1722026200.filipe-desktop.211155.0  events.out.tfevents.1723598806.filipe-desktop.5130.0
ppo_novamob_tensorboard/PPO_14/: events.out.tfevents.1722026397.filipe-desktop.212460.0  events.out.tfevents.1723680915.filipe-desktop.19922.0
ppo_novamob_tensorboard/PPO_15/: events.out.tfevents.1722026548.filipe-desktop.213422.0  events.out.tfevents.1724123420.filipe-desktop.7390.0
ppo_novamob_tensorboard/PPO_16/: events.out.tfevents.1722027374.filipe-desktop.218363.0  events.out.tfevents.1724156572.filipe-desktop.202046.0
scripts/: final_test.py  test_env.py  test_training.py  training_env.py  training_env_ppo.py
src/novamob_gym/: package.xml  setup.cfg  setup.py
(+48 files in other folders)
